Only doc public API.

--- a/Cojen/project.properties
+++ b/Cojen/project.properties
@@ -7,3 +7,6 @@ maven.xdoc.date.format = yyyy-MM-dd
 # maven.junit.fork=true
 maven.xdoc.poweredby.image=maven-feather.png
 maven.javadoc.links=http://java.sun.com/products/j2se/1.4/docs/api
+maven.javadoc.public=true
+maven.javadoc.package=false
+maven.javadoc.private=false
