--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,8 @@
 					<configuration>
 						<aggregate>true</aggregate>
 						<links>
-							<link>http://java.sun.com/j2se/1.5.0/docs/api</link>
+							<link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
+							<link>http://download.oracle.com/javase/7/docs/api/</link>
 						</links>
 					</configuration>
 			</plugin>
